Fixed few typing errors in Readme_eng.html

--- a/Release/Readme_eng.html
+++ b/Release/Readme_eng.html
@@ -121,7 +121,7 @@ out of date. See the OpenGL version information in the top-left corner of the ma
 at least 1.4.x. If it is less you need to update your graphics card drivers 
 (check your card manufacturers website).<br></p>
 <p><B>Game errors:</B><br>Sometimes when something unexpected happens you will get an &quot;<i>An 
-error has occoured during gameplay</i>&quot; 
+error has occurred during gameplay</i>&quot; 
 message. Please read the message details and send recorded replay files from 
 Saves folder (save99.bas, save99.sav, save99.rpl) by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) or Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) 
 along with details of what you did to make it crash and any other information 
@@ -145,7 +145,7 @@ limitations</a></FONT></B></td>
 	</table>
 </blockquote>
 <p><font face="Calibri">Main menu has fixed design size of 1024x768 regardless of window 
-size or fullscreen mode.<br>
+size or full-screen mode.<br>
 Only single-player maps are supported (ones with !SET_HUMAN_PLAYER line).<br>
 Unit training in Town Hall and Siege Workshop is not functioning.<br>
 Troop user interface and behaviour is yet limited.<br>
@@ -176,7 +176,7 @@ for improvement - please drop us an email or write on the forum.</font>
 </blockquote>
 <p><font face="Calibri">The KaM Remake source code is available at our project page:<br>
 <a href="http://code.google.com/p/castlesand">http://code.google.com/p/castlesand</a><br>
-We ecourage you to submit bugs using built-in interface:<br>
+We encourage you to submit bugs using built-in interface:<br>
 <a href="http://code.google.com/p/castlesand/issues/entry">http://code.google.com/p/castlesand/issues/entry</a><br>
 </font><br>&nbsp;</p>
 <blockquote>
