--- a/Release/Readme_ger.html
+++ b/Release/Readme_ger.html
@@ -23,7 +23,7 @@
             </tr>
           </table>
         </blockquote>
-        <p><font face="Calibri">KaM Remake (wir haben noch keinen schicken Titel) 
+        <p><font face="Calibri">KaM Remake (wir haben noch keinen besseren Titel) 
           ist ein Versuch das originale &quot;Knights and Merchants: The Shattered 
           Kingdom&quot; wiederzubeleben. Unsere Ziele sind es, das Spiel auf heutigen 
           Computern und Betriebssystemen zum Laufen zu bringen, ebenso die vielen 
@@ -32,7 +32,7 @@
           originale Dateien zur&uuml;ck. Dies ist unsere &ouml;ffentlich begrenzte 
           Technologievorschau (Demo) mit der wirtschaftlichen und der kriegerischen 
           Seite des Spiels; bezeichnet als &quot;Modifikation&quot; oder &quot;Neuauflage&quot;. 
-          Unsere Absicht ist es das Potenzial zu demonstrieren und Feedback &uuml;ber 
+          Unsere Absicht ist es, das Potenzial zu demonstrieren und Feedback &uuml;ber 
           die Funktionalit&auml;t zu bekommen. Alle von KaM entlehnten &quot;Eigent&uuml;mer&quot; 
           (Grafiken, Musik, Sounds, etc.) sind nur da, um die Absichten zu testen. 
           Die finale Version wird keine, mit Copyright versehene, Dateien enthalten.<br>
@@ -66,16 +66,16 @@
             </tr>
           </table>
         </blockquote>
-        <p><font face="Calibri"><B>1.</B> Entpacken Sie alle Dateien aus dem Paket 
-          in einen neuen Ordner auf ihrem PC.<br>
+        <p><font face="Calibri"><B>1.</B> Entpackt alle Dateien aus dem Paket 
+          in einen neuen Ordner auf eurem PC.<br>
           <B>2.</B> Das Paket beinhaltet die OpenAL Audiotreiber (<b>oalinst.exe</b>), 
-          welche du installieren solltest um das KaM Remake zu spielen. Die neuste 
+          welche ihr installieren solltet um das KaM Remake zu spielen. Die neuste 
           Version kann unter der offiziellen OpenAL-Seite gefunden werden:<a href="http://connect.creativelabs.com/openal/default.aspx"> 
           http://connect.creativelabs.com/openal/default.aspx</a> <br>
-          <B>3.</B> Das Remake benutzt die OpenGL Rendering Engine, Sie m&uuml;ssen 
-          also die OpenGL-Treiber installiert haben. Besuchen Sie die Seite des 
-          Herstellers Ihrer Grafikkarte um die neusten Treiber zu bekommen.<br>
-          <B>4.</B> Starten Sie die Modifikation - KaM_Remake.exe.<br>
+          <B>3.</B> Das Remake benutzt die OpenGL Rendering Engine, ihr m&uuml;sst 
+          also die OpenGL-Treiber installiert haben. Besucht die Seite des Herstellers 
+          eurer Grafikkarte um die neusten Treiber zu bekommen.<br>
+          <B>4.</B> Startet die Modifikation - KaM_Remake.exe.<br>
           &nbsp;</font></p>
         <blockquote> 
           <table border="0" cellspacing="0" cellpadding="0">
@@ -93,30 +93,30 @@
           <b>P</b> pausiert das Spiel<br>
           <b>W</b> deckt die komplette Karte auf<br>
           <b>Esc</b> schlie&szlig;t offene Nachricht oder Auswahl<br>
-          <b>Del</b> l&ouml;scht offene Nachricht<br>
-          <b>Spacebar</b> bewegt das Sichtfeld zum Ort der letzten Nachricht<br>
-          <b>&#8592;&#8593;&#8594;&#8595;</b> Pfeiltasten bewegen das Sichtfeld<br>
+          <b>Enf</b> l&ouml;scht offene Nachricht<br>
+          <b>Leertaste</b> bewegt das Sichtfeld zum Ort der letzten Nachricht<br>
+          <b>&#8592;&#8593;&#8594;&#8595;</b> Pfeiltasten bewegen das Sichtfeld</font><font face="Calibri"><br>
           Drehen des <b>Mausrads</b> zoomt heran und heraus<br>
           <b>&#8592; </b>Backspace setzt den Zoom auf 100% zur&uuml;ck<br>
           <b>Klick auf Mausrad</b> platziert Sp&auml;her auf Position des Mauszeigers 
           um Map zu erkunden<br>
           </font></p>
         <p><font face="Calibri"><B>Zus&auml;tzliche Karten installieren:</B><br>
-          <B>1.</B> Erstelle einen Unterordner im Verzeichnis 'Maps' und bennene 
+          <B>1.</B> Erstellt einen Unterordner im Verzeichnis 'Maps' und bennent 
           ihn zum Beispiel &quot;Meine neue Karte&quot;.<br>
-          <B>2.</B> F&uuml;ge die .dat- und .map-Datei ein und benenne sie entsprechened 
+          <B>2.</B> F&uuml;gt die .dat- und .map-Datei ein und benennt sie entsprechened 
           &quot;Meine neue Karte.dat&quot; und &quot;Meine neue Karte.map&quot;. 
           Die Dateinamen sollten exakt dem Ordnernamen gleichen.<br>
-          <B>3.</B> Du kannst optional auch eine Datei namens &quot;Meine neue 
-          Karte.txt&quot; anlegen, welche die Missionsbeschreibung<br>
-          und andere Informationen enthalten wird. Benutze das selbe Format wie 
+          <B>3.</B> Ihr k&ouml;nnt optional auch eine Datei namens &quot;Meine 
+          neue Karte.txt&quot; anlegen, welche die Missionsbeschreibung<br>
+          und andere Informationen enthalten wird. Benutzt das selbe Format wie 
           in den Missionen die das Remake<br>
           anbietet. Keine offizielle Formatierung wird ver&ouml;ffentlicht, da 
           sich das Format wahrscheinlich noch <br>
           &auml;ndern wird.</font></p>
         <p><font face="Calibri"><b>Benutzerdefinierte Musik hinzuf&uuml;gen:</b><br>
-          In das Verzeichnis 'Music' kannst du MP3-Dateien einf&uuml;gen, sie 
-          werden automatisch in die Playlist geladen.<br>
+          In das Verzeichnis 'Music' k&ouml;nnt ihr MP3-Dateien einf&uuml;gen, 
+          sie werden automatisch in die Playlist geladen.<br>
           &nbsp;</font></p>
         <blockquote> 
           <table border="0" cellspacing="0" cellpadding="0">
@@ -133,30 +133,30 @@
         </p>
         <p><B>Niedrige Framerate:</B><br>
           Falls das Programm eine niedrige Framerate hat, k&ouml;nnte es sein, 
-          dass die OpenGL-Treiber nicht mehr aktuell sind. Du kannst die OpenGL-Version 
-          in der Ecke links oben im Hauptmen&uuml; sehen. Es sollte mindestens 
-          Version 1.4.x sein.<br>
+          dass die OpenGL-Treiber nicht mehr aktuell sind. Ihr k&ouml;nnt die 
+          OpenGL-Version in der Ecke links oben im Hauptmen&uuml; sehen. Es sollte 
+          mindestens Version 1.4.x sein.<br>
         </p>
         <p><B>Fehler im Spiel:</B><br>
-          Manchmal wenn etwas Unerwartetes passiert, bekommst du eine Fehlermeldung 
+          Manchmal wenn etwas Unerwartetes passiert, bekommt ihr eine Fehlermeldung 
           &quot;An error has occoured during <br>
-          gameplay&quot;. Bitte lese die Details der Nachricht und sende uns die 
-          aufgenommenen Replay-Dateien aus dem Ordner<br>
+          gameplay&quot;. Bitte lest die Details der Nachricht und sendet uns 
+          die aufgenommenen Replay-Dateien aus dem Ordner<br>
           'Saves' (save99.bas, save99.sav, save99.rpl) per E-Mail (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a> 
-          oder <a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>). Teile<br>
-          uns mit was du gemacht hast bevor die Fehlermeldung kam und schreibe 
-          m&ouml;glicher Weise andere Informationen<br>
+          oder <a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>). Teilt<br>
+          uns mit was ihr gemacht habt bevor die Fehlermeldung kam und schreibt 
+          m&ouml;glicherweise andere Informationen<br>
           dazu, die uns von Nutzen sein k&ouml;nnen.<br>
         </p>
-        <p><B>Assertion failed Fehler:</B><br>
+        <p><B>Assertion failed:</B><br>
           Auch erscheint manchmal eine &quot;Assertion failed&quot;-Nachricht. 
-          In diesem Fall solltest du KaM_Remake mit dem Task Manager (dr&uuml;cke 
+          In diesem Fall solltet ihr KaM_Remake mit dem Task Manager (dr&uuml;ckt 
           Strg+Alt+Enf) beenden.<br>
-          Dann gehe in das KaM Remake-Verzeichnis und finde die Datei 'KaM.log'. 
-          Sie beinhaltet Details des Absturzes.Bitte sende die Datei per E-Mail 
+          Dann geht in das KaM Remake-Verzeichnis und findet die Datei 'KaM.log'. 
+          Sie beinhaltet Details des Absturzes. Bitte sendet die Datei per E-Mail 
           an Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) 
           oder Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>). 
-          H&auml;nge bitte auch die Replay-Dateien an.</font><br>
+          H&auml;ngt bitte auch die Replay-Dateien an.</font><br>
           &nbsp;</P>
         <blockquote> 
           <table width="467" border="0" cellpadding="0" cellspacing="0">
@@ -184,13 +184,13 @@
             </tr>
           </table>
         </blockquote>
-        <p>Bitte benutze <font face="Calibri"><A href="http://www.atfreeforum.com/knights/viewtopic.php?t=233&mforum=knights">Forum</A></font> 
+        <p>Bitte benutzt <font face="Calibri"><A href="http://www.atfreeforum.com/knights/viewtopic.php?t=233&mforum=knights">Forum</A></font> 
           oder E-Mail um uns Feedback zu geben. Die meisten Fehler sind wahrscheinlich 
           bereits bekannt, aber wir w&uuml;rden eure Kommentare, Vorschl&auml;ge 
           und Komplimente lieben.<br>
-          Wenn du etwas Hilfe in Sachen Delphi, Men&uuml;design, Dokumentation 
-          oder &Uuml;bersetzung anbieten kannst oder Ideen f&uuml;r Verbesserungen 
-          hast, sende uns bitte eine E-Mail oder schreibe im Forum.<br>
+          Wenn ihr etwas Hilfe in Sachen Delphi, Men&uuml;design, Dokumentation 
+          oder &Uuml;bersetzung anbieten k&ouml;nnt oder Ideen f&uuml;r Verbesserungen 
+          habt, sende uns bitte eine E-Mail oder schreibe im Forum.<br>
           &nbsp; </p>
         <blockquote> 
           <table border="0" cellspacing="0" cellpadding="0">
@@ -203,7 +203,7 @@
         <p><font face="Calibri">Der KaM Remake-Quelltext ist auf unserer Projektseite 
           verf&uuml;gbar:<br>
           <a href="http://code.google.com/p/castlesand">http://code.google.com/p/castlesand</a><br>
-          We ecourage you to submit bugs using built-in interface:<br>
+          Hier k&ouml;nnt ihr uns Fehler berichten:<br>
           <a href="http://code.google.com/p/castlesand/issues/entry">http://code.google.com/p/castlesand/issues/entry</a><br>
           </font><br>
           &nbsp;</p>
@@ -221,9 +221,8 @@
           Gro&szlig;en Dank an die KaM Community und an ihre aktiven Mitglieder 
           (Free_sms_kam, Harold, JBSnorro, The Knight, Litude (Real Hotdog), Merchator, 
           Nick, Thunderwolf und viele mehr) daf&uuml;r dass sie uns beim Entschl&uuml;sseln 
-          halfen, uns Ratschl&auml;ge gaben und f&uuml;r ihr Engagement.<br>
-	  Dieses Dokument wurde ins Deutsche &uuml;bersetzt 
-          von Vas.<br>
+         halfen, uns Ratschl&auml;ge gaben und f&uuml;r ihr Engagement.<br>
+          Dieses Dokument wurde ins Deutsche &uuml;bersetzt von Vas (space_aber).<br>
           &nbsp;</font> </p>
         <blockquote> 
           <table border="0" cellspacing="0" cellpadding="0">
@@ -233,17 +232,18 @@
             </tr>
           </table>
         </blockquote>
-        <font face="Calibri">Commercial use is prohibited.<br>
-        Any used names, symbols or other copyrighted material is the property 
-        of the respective owners.<br>
-        We do not take any responsibility if this mod harms your software or hardware.<br>
-        For obvious reasons publishing and/or sharing of this mod in any form 
-        is not allowed without this readme file.<br>
-        You can upload this mod to your site/server/homepage, but please let us 
-        know first.<br>
-        We assume that you (end user/player) own a licensed copy of the game KaM, 
-        otherwise you should buy the game before using this mod. Failing to do 
-        so will be breaching the license agreement.</font> </td>
+        <p>Kommerzieller Gebrauch ist verboten.<br>
+          Alle benutzten Namen, Symbole oder andere, mit einem Copyright versehene, 
+          Materialien sind Eigentum des jeweiligen Besitzers.Wir nehmen keine 
+          Verantwortung f&uuml;r m&ouml;gliche Hardwaresch&auml;den. Weitergabe 
+          oder &Auml;hnliches dieser Modifikation ist ohne diese beiliegende ReadMe 
+          nicht erlaubt. Ihr k&ouml;nnt das Remake auf euren Server hochladen 
+          und ver&ouml;ffentlichen, aber bitte lasst es uns wissen.Wir gehen davon 
+          aus, dass ihr eine eigene lizensierte Kopie des Spiels Knights and Merchants 
+          haben, andernfalls solltet ihr das Spiel kaufen bevor ihr diese Modifikation 
+          benutzt. </p>
+        </p>
+        </td>
     </tr>
     <tr>
       <td>&nbsp;</td>
