Updates in readmes

--- a/Release/Readme_ger.html
+++ b/Release/Readme_ger.html
@@ -41,7 +41,7 @@
           Onlineshops verf&uuml;gbar.<br>
           Die Kam Remake Exe-Datei ist Freeware und wurde von Liebhabern des Spiels 
           erstellt. Die Anwendung benutzt:<br>
-          Delphi6, FastMM4, Lazarus, OpenGL, OpenAL, zLib.</font><BR>
+          Delphi 6, Delphi 7, FastMM4, Lazarus, OpenGL, OpenAL, zLib.</font><BR>
           &nbsp;</p>
         <blockquote> 
           <table border="0" cellspacing="0" cellpadding="0">
