--- a/Release/Readme_rus.html
+++ b/Release/Readme_rus.html
@@ -25,29 +25,37 @@ Brought to you by Krom and Lewin</font></P><hr>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">KaM Remake (we don't have a fancy title yet) is an attempt to reinvigorate the original &quot;Knights and Merchants: The Shattered Kingdom&quot; strategy game. Our goals are to make it work on today's computers and operating systems, as well as to fix the many bugs in the game engine. To do this we have started from scratch, writing our own code for the game engine but still relying on many original resource files.
-This is our public limited technology preview (demo) featuring the economic and 
-fighting side of the game; referred as &quot;mod&quot; or &quot;Remake&quot; from now on. Our aim is to demonstrate the 
-potential and get feedback on functionality. All included &quot;assets&quot; borrowed from 
-KaM (graphics, music, sounds, etc.) are there for testing purposes only, and the final release will not include any of the 
-copyrighted &quot;assets&quot;.<br>
-We assume that you own the original KaM game, otherwise you should buy it - 
-it's available in a number of online gaming stores.<br>
-The KaM Remake executable is freeware and is 
-built by enthusiasts. Applications used: Delphi 6, Delphi 7, FastMM4, Lazarus, OpenGL, OpenAL, zLib.</font><BR>&nbsp;</p>
+<p><font face="Calibri">KaM Remake (мы еще не придумали красивое название) - это попытка оживить оригинальную 
+стратегическую игру "Knights and Merchants: The Shattered Kingdom" (далее просто 
+&quot;КаМ&quot;). Наши цели - сделать игру работоспособной на современных компьютерах, а также исправить множество 
+ошибок в движке игры. Для того чтобы это сделать мы начали &quot;с нуля&quot; писать свой 
+движок, полагаясь на оригинальные файлы ресурсов игры. Это наша публичная 
+технологическая демо-версия, показывающая экономическую и военную стороны игры, 
+далее называемая &quot;игра&quot; или &quot;Remake&quot;. Наша цель продемонстрировать потенциал и 
+получить отклик по функциональности игры. Все использованные ресурсы взяты из 
+КаМ (графика, музыка, звуки, и т.п.) и используются только для разработки и 
+отладки. Финальная версия не будет включать в себя никаких защищенных авторских 
+ресурсов.<br>
+Мы полагаем, что у Вы обладаете лицензионной версией КаМ, иначе вам следует ее 
+приобрести - ее можно купить в ряде он-лайн магазинов.<br>
+Исполняемый файл KaM Remake доступен для свободного распространения и сделан 
+энтузиастами. Использованные приложения: Delphi 6, Delphi 7, FastMM4, Lazarus, 
+OpenGL, OpenAL, zLib.</font><BR>&nbsp;</p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
 	<img border="0" src="Readme/GUI_0310.gif"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="System_Requirements">System Requirements</a></FONT></B></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="System_Requirements">Системные требования</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">KaM Remake requires: <br>&nbsp;&nbsp;&nbsp; - Microsoft Windows 98, XP, Vista or Seven;
-<br>&nbsp;&nbsp;&nbsp; - 500MHz or faster processor;<br>&nbsp;&nbsp;&nbsp; - 256MB or more of RAM;
-<br>&nbsp;&nbsp;&nbsp; - 3D graphics accelerator OpenGL 1.4 compliant;<br>&nbsp;&nbsp;&nbsp; 
-- Sound card.<br>&nbsp;</font></p>
+<p><font face="Calibri">KaM Remake требуется: <br>&nbsp;&nbsp;&nbsp; - 
+Операционная система: Windows 98/XP/Vista/Seven; 
+<br>&nbsp;&nbsp;&nbsp; - Процессор Pentium II 500MHz или лучше;<br>&nbsp;&nbsp;&nbsp; - 
+256 MB оперативной памяти;
+<br>&nbsp;&nbsp;&nbsp; - 3D ускоритель с поддержкой OpenGL версии 1.4 или выше;<br>&nbsp;&nbsp;&nbsp; 
+- Звуковая карта.<br>&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -120,7 +128,7 @@ out of date. See the OpenGL version information in the top-left corner of the ma
 at least 1.4.x. If it is less you need to update your graphics card drivers 
 (check your card manufacturers website).<br></p>
 <p><B>Game errors:</B><br>Sometimes when something unexpected happens you will get an &quot;<i>An 
-error has occurred during gameplay</i>&quot; 
+error has occoured during gameplay</i>&quot; 
 message. Please read the message details and send recorded replay files from 
 Saves folder (save99.bas, save99.sav, save99.rpl) by email either to Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) or Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) 
 along with details of what you did to make it crash and any other information 
@@ -144,7 +152,7 @@ limitations</a></FONT></B></td>
 	</table>
 </blockquote>
 <p><font face="Calibri">Main menu has fixed design size of 1024x768 regardless of window 
-size or full-screen mode.<br>
+size or fullscreen mode.<br>
 Only single-player maps are supported (ones with !SET_HUMAN_PLAYER line).<br>
 Unit training in Town Hall and Siege Workshop is not functioning.<br>
 Troop user interface and behaviour is yet limited.<br>
@@ -175,7 +183,7 @@ for improvement - please drop us an email or write on the forum.</font>
 </blockquote>
 <p><font face="Calibri">The KaM Remake source code is available at our project page:<br>
 <a href="http://code.google.com/p/castlesand">http://code.google.com/p/castlesand</a><br>
-We encourage you to submit bugs using built-in interface:<br>
+We ecourage you to submit bugs using built-in interface:<br>
 <a href="http://code.google.com/p/castlesand/issues/entry">http://code.google.com/p/castlesand/issues/entry</a><br>
 </font><br>&nbsp;</p>
 <blockquote>
