Fixed error message when Saves folder not yet created Fixed my mistakes in SoundLib Updated readmes

--- a/Release/Readme_eng.html
+++ b/Release/Readme_eng.html
@@ -34,7 +34,7 @@ copyrighted &quot;assets&quot;.<br>
 We assume that you own the original KaM game, otherwise you should buy it - 
 it's available in a number of online gaming stores.<br>
 The KaM Remake executable is freeware and is 
-built by enthusiasts. Applications used: Delphi 6, Delphi 7, FastMM4, Lazarus, OpenGL, OpenAL, zLib.</font><BR>&nbsp;</p>
+built by enthusiasts. Applications used: Delphi 6, Delphi 7, FastMM4, Lazarus, OpenGL, OpenAL, zLib, PNGImage.</font><BR>&nbsp;</p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -44,10 +44,13 @@ built by enthusiasts. Applications used: Delphi 6, Delphi 7, FastMM4, Lazarus, O
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">KaM Remake requires: <br>&nbsp;&nbsp;&nbsp; - Microsoft Windows 98, XP, Vista or Seven;
-<br>&nbsp;&nbsp;&nbsp; - 500MHz or faster processor;<br>&nbsp;&nbsp;&nbsp; - 256MB or more of RAM;
-<br>&nbsp;&nbsp;&nbsp; - 3D graphics accelerator OpenGL 1.4 compliant;<br>&nbsp;&nbsp;&nbsp; 
-- Sound card.<br>&nbsp;</font></p>
+<p><font face="Calibri">KaM Remake requires:<br>
+&nbsp;&nbsp;&nbsp; - Microsoft Windows 98, XP, Vista or Seven;<br>
+&nbsp;&nbsp;&nbsp; - 500MHz or faster processor;<br>
+&nbsp;&nbsp;&nbsp; - 256MB or more of RAM;<br>
+&nbsp;&nbsp;&nbsp; - 3D graphics accelerator OpenGL 1.4 compliant;<br>
+&nbsp;&nbsp;&nbsp; - Sound card.<br>
+&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -82,7 +85,6 @@ drivers available.
 <b>F11 </b>will show debugging panel and menu<br>
 <b>1-4</b> opens corresponding tab in the gameplay menu<br>
 <b>P</b> pauses the game<br>
-<b>W</b> reveals the whole map in game<br>
 <b>Esc</b> closes the open message or active tab in the game menu.<br>
 <b>Del</b> deletes the open message in game<br>
 <b>Spacebar</b> goes to the location of the open message in game<br>
@@ -143,12 +145,11 @@ limitations</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">Main menu has fixed design size of 1024x768 regardless of window 
-size or full-screen mode.<br>
+<p><font face="Calibri">
 Only single-player maps are supported (ones with !SET_HUMAN_PLAYER line).<br>
 Unit training in Town Hall and Siege Workshop is not functioning.<br>
 Troop user interface and behaviour is yet limited.<br>
-Archers don't use arrows in attack.<br>&nbsp;</font></p>
+&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
