--- a/Release/Readme_ger.html
+++ b/Release/Readme_ger.html
@@ -41,7 +41,7 @@
           Onlineshops verf&uuml;gbar.<br>
           Die Kam Remake Exe-Datei ist Freeware und wurde von Liebhabern des Spiels 
           erstellt. Die Anwendung benutzt:<br>
-          Delphi 6, Delphi 7, FastMM4, Lazarus, OpenGL, OpenAL, zLib.</font><BR>
+          Delphi 6, Delphi 7, FastMM4, Lazarus, OpenGL, OpenAL, zLib, PNGImage.</font><BR>
           &nbsp;</p>
         <blockquote> 
           <table border="0" cellspacing="0" cellpadding="0">
@@ -91,7 +91,6 @@
           <b>F11 </b>zeigt Men&uuml; und Debugging Panel<br>
           <b>1-4</b> &ouml;ffnet jeweilige Auswahl im Spielmen&uuml;<br>
           <b>P</b> pausiert das Spiel<br>
-          <b>W</b> deckt die komplette Karte auf<br>
           <b>Esc</b> schlie&szlig;t offene Nachricht oder Auswahl<br>
           <b>Enf</b> l&ouml;scht offene Nachricht<br>
           <b>Leertaste</b> bewegt das Sichtfeld zum Ort der letzten Nachricht<br>
@@ -167,14 +166,9 @@
             </tr>
           </table>
         </blockquote>
-        <p><font face="Calibri">Das Hauptmen&uuml; hat eine feste Aufl&ouml;sung 
-          von 1024x768 Pixeln unabh&auml;ngig ob das Programm im Fullscreen- oder 
-          Fenstermodus l&auml;uft.<br>
-          Nur Einzelspielermissionen werden unterst&uuml;tzt (welche mit !SET_HUMAN_PLAYER 
-          Befehl).<br>
-          Es k&ouml;nnen noch keine Einheiten in Kriegswerkstatt und Rathaus ausgebildet 
-          werden.<br>
-          Sch&uuml;tzen benutzen keine Pfeile beim k&auml;mpfen.<br>
+        <p><font face="Calibri">
+          Nur Einzelspielermissionen werden unterst&uuml;tzt (welche mit !SET_HUMAN_PLAYER Befehl).<br>
+          Es k&ouml;nnen noch keine Einheiten in Kriegswerkstatt und Rathaus ausgebildet werden.<br>
           &nbsp;</font></p>
         <blockquote> 
           <table border="0" cellspacing="0" cellpadding="0">
