--- a/Release/Readme_rus.html
+++ b/Release/Readme_rus.html
@@ -10,18 +10,18 @@
 <P align="center"><font face="Calibri"><FONT size="+3">Knights and Merchants 
 Remake Demo</FONT><BR>
 Brought to you by Krom and Lewin</font></P><hr>
-<p align="center"><font face="Calibri">Readme contents: <br>
-<a href="#Description">Description</a> · <a href="#Source">Source Code</a> · <a href="#System_Requirements">System requirements</a> · <a href="#Installing">Installing</a> 
+<p align="center"><font face="Calibri">Содержание документа: <br>
+<a href="#Description">Описание</a> · <a href="#System_Requirements">Системные требования</a> · <a href="#Installing">Установка</a> 
 · <a href="#Gameplay">Gameplay</a> · <a href="#F_A_Q_">F.A.Q.</a> ·
 <a href="#Known_bugs">Known bugs</a> · <a href="#Feedback">Feedback</a> ·
-<a href="#Credits">Credits</a> ·
+<a href="#Source">Source Code</a> · <a href="#Credits">Credits</a> ·
 <a href="#Legal">Legal notice</a></font></p><hr>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
 	<img border="0" src="Readme/GUI_0318.gif"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Description">Description</a></FONT></B></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Description">Описание</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
@@ -40,7 +40,7 @@ Brought to you by Krom and Lewin</font></P><hr>
 приобрести - ее можно купить в ряде он-лайн магазинов.<br>
 Исполняемый файл KaM Remake доступен для свободного распространения и сделан 
 энтузиастами. Использованные приложения: Delphi 6, Delphi 7, FastMM4, Lazarus, 
-OpenGL, OpenAL, zLib.</font><BR>&nbsp;</p>
+OpenGL, OpenAL, zLib, PNGImage.</font><BR>&nbsp;</p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -50,30 +50,30 @@ OpenGL, OpenAL, zLib.</font><BR>&nbsp;</p>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">KaM Remake требуется: <br>&nbsp;&nbsp;&nbsp; - 
-Операционная система: Windows 98/XP/Vista/Seven; 
-<br>&nbsp;&nbsp;&nbsp; - Процессор Pentium II 500MHz или лучше;<br>&nbsp;&nbsp;&nbsp; - 
-256 MB оперативной памяти;
-<br>&nbsp;&nbsp;&nbsp; - 3D ускоритель с поддержкой OpenGL версии 1.4 или выше;<br>&nbsp;&nbsp;&nbsp; 
-- Звуковая карта.<br>&nbsp;</font></p>
+<p><font face="Calibri">KaM Remake требуется:<br>
+&nbsp;&nbsp;&nbsp; - Операционная система: Microsoft Windows 98/XP/Vista/Seven;<br>
+&nbsp;&nbsp;&nbsp; - Процессор Pentium II 500MHz или лучше;<br>
+&nbsp;&nbsp;&nbsp; - 256 MB оперативной памяти;<br>
+&nbsp;&nbsp;&nbsp; - 3D ускоритель с поддержкой OpenGL версии 1.4 или выше;<br>
+&nbsp;&nbsp;&nbsp; - Звуковая карта.<br>
+&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td>
 	<img border="0" src="Readme/GUI_0303.gif"></td>
-			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Installing">Installation</a></FONT></B></td>
+			<td><B><FONT size="+2" face="Calibri">&nbsp;<a name="Installing">Установка</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri"><B>1.</B> Unpack all files contained in the package into a new 
-folder on your PC.<br>
-<B>2.</B> The package includes the OpenAL audio drivers (<b>oalinst.exe</b>), which you should install in order to play the KaM Remake. The latest version can be found on the official OpenAL page:
+<p><font face="Calibri">
+<b>1.</b> Распакуйте все файлы из архива  новую папку на Вашем компьютере.<br>
+<b>2.</b> Архив включает в себя звуковые драйверы OpenAL (<b>oalinst.exe</b>), которые Вам также следует установить, для игры в KaM Remake. 
+Последние версии драйверов Вы можете скачать с официального сайта OpenAL:
 <a href="http://connect.creativelabs.com/openal/default.aspx">
 http://connect.creativelabs.com/openal/default.aspx</a> <br>
-<B>3.</B> The KaM Remake uses the OpenGL rendering engine, so you need to have OpenGL drivers 
-installed as well. Visit your graphics card manufacturer site to get the latest 
-drivers available.
-<br><B>4.</B> Launch the mod - KaM_Remake.exe.<br>&nbsp;</font></p>
+<b>3.</b> KaM Remake использует OpenGL для графики, так что Вам также может потребоваться установить последние графический драйвера, от производителя вашей видео-карты.<br>
+<b>4.</b> Запустите мод - KaM_Remake.exe.<br>&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -90,7 +90,6 @@ drivers available.
 <b>F11 </b>will show debugging panel and menu<br>
 <b>1-4</b> opens corresponding tab in the gameplay menu<br>
 <b>P</b> pauses the game<br>
-<b>W</b> reveals the whole map in game<br>
 <b>Esc</b> closes the open message or active tab in the game menu.<br>
 <b>Del</b> deletes the open message in game<br>
 <b>Spacebar</b> goes to the location of the open message in game<br>
@@ -151,12 +150,11 @@ limitations</a></FONT></B></td>
 		</tr>
 	</table>
 </blockquote>
-<p><font face="Calibri">Main menu has fixed design size of 1024x768 regardless of window 
-size or fullscreen mode.<br>
+<p><font face="Calibri">
 Only single-player maps are supported (ones with !SET_HUMAN_PLAYER line).<br>
 Unit training in Town Hall and Siege Workshop is not functioning.<br>
 Troop user interface and behaviour is yet limited.<br>
-Archers don't use arrows in attack.<br>&nbsp;</font></p>
+&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -183,7 +181,7 @@ for improvement - please drop us an email or write on the forum.</font>
 </blockquote>
 <p><font face="Calibri">The KaM Remake source code is available at our project page:<br>
 <a href="http://code.google.com/p/castlesand">http://code.google.com/p/castlesand</a><br>
-We ecourage you to submit bugs using built-in interface:<br>
+We encourage you to submit bugs using built-in interface:<br>
 <a href="http://code.google.com/p/castlesand/issues/entry">http://code.google.com/p/castlesand/issues/entry</a><br>
 </font><br>&nbsp;</p>
 <blockquote>
