- Working on foes  - Cleanup  - Added goals to some missions  - Updated readme

--- a/Release/Readme_ger.html
+++ b/Release/Readme_ger.html
@@ -169,6 +169,8 @@
         <p><font face="Calibri">
           Nur Einzelspielermissionen werden unterst&uuml;tzt (welche mit !SET_HUMAN_PLAYER Befehl).<br>
           Es k&ouml;nnen noch keine Einheiten in Kriegswerkstatt und Rathaus ausgebildet werden.<br>
+          TPR troops are not supported yet.<br>
+          AI behavior is still limited.<br>
           &nbsp;</font></p>
         <blockquote> 
           <table border="0" cellspacing="0" cellpadding="0">
