--- a/Release/Readme_rus.html
+++ b/Release/Readme_rus.html
@@ -153,7 +153,8 @@ limitations</a></FONT></B></td>
 <p><font face="Calibri">
 Only single-player maps are supported (ones with !SET_HUMAN_PLAYER line).<br>
 Unit training in Town Hall and Siege Workshop is not functioning.<br>
-Troop user interface and behaviour is yet limited.<br>
+TPR troops are not supported yet.<br>
+AI behavior is still limited.<br>
 &nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
