- Fixed a bug which caused units to do the next strike faster after they killed a unit. Now they complete the killing blow before starting the next one, same with archers reloading (reported by Humbelum)  - Fighting units will only change direction in between strikes. This looks better and matches KaM  - Fixed the pause after storm attack before attacking the enemy (thanks Humbelum!)  - When told to change formation or direction units which has an order (e.g. walking) will continue walking with the new formation rather than stopping where they are  - Engage (foe) checks are done every tick, but only when our group is in combat. The check does not take long to process and will only occur once for each unit, after that ws_Engage is set and we lock onto a foe  - Added Humbelum and Vas to the thanks section of the readmes, they have contributed a lot recently

--- a/Release/Readme_eng.html
+++ b/Release/Readme_eng.html
@@ -194,7 +194,7 @@ We encourage you to submit bugs using built-in interface:<br>
 Programmer - Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>)<br>
 Thanks to Alex who introduced the core design back in 2008<br>
 Huge thanks to the KaM community and its active members (Free_sms_kam, Harold, JBSnorro, 
-The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf and many others) who helped us with decoding, advice, ideas and encouragement.<br>&nbsp;</font>
+The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf, Humbelum, Vas and many others) who helped us with decoding, advice, ideas and encouragement.<br>&nbsp;</font>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
