--- a/Release/Readme_ger.html
+++ b/Release/Readme_ger.html
@@ -216,7 +216,7 @@
           Danke an Alex, der uns 2008 in das Core Design eingewiesen hat.<br>
           Gro&szlig;en Dank an die KaM Community und an ihre aktiven Mitglieder 
           (Free_sms_kam, Harold, JBSnorro, The Knight, Litude (Real Hotdog), Merchator, 
-          Nick, Thunderwolf und viele mehr) daf&uuml;r dass sie uns beim Entschl&uuml;sseln 
+          Nick, Thunderwolf, Humbelum, Vas und viele mehr) daf&uuml;r dass sie uns beim Entschl&uuml;sseln 
          halfen, uns Ratschl&auml;ge gaben und f&uuml;r ihr Engagement.<br>
           Dieses Dokument wurde ins Deutsche &uuml;bersetzt von Vas (space_aber).<br>
           &nbsp;</font> </p>
