Updates and tweaks in readmes

--- a/Release/Readme_eng.html
+++ b/Release/Readme_eng.html
@@ -82,15 +82,15 @@ drivers available.
 <font face="Calibri">
 <b>The following shortcuts are available in the game:</b><br>
 <b>F8</b> speeds up the game pace x10<br>
-<b>F11 </b>will show debugging panel and menu<br>
+<b>F11</b> will show debugging panel and menu<br>
 <b>1-4</b> opens corresponding tab in the gameplay menu<br>
 <b>P</b> pauses the game<br>
-<b>Esc</b> closes the open message or active tab in the game menu.<br>
+<b>Esc</b> closes the open message or active tab in the game menu<br>
 <b>Del</b> deletes the open message in game<br>
 <b>Spacebar</b> goes to the location of the open message in game<br>
 <b>&#8592;&#8593;&#8594;&#8595;</b> cursor keys will move you around the map<br>
 Scrolling the <b>Mouse wheel</b> will zoom in and out<br>
-<b>&#8592; </b>backspace will reset zoom back to 100%<br>
+<b>&#8592;</b> backspace will reset zoom back to 100%<br>
 <b>Middle mouse click</b> will place a horseman (scout) at the cursor position to allow you to explore 
 the map<br>
 </font></p>
