--- a/Release/Readme_rus.html
+++ b/Release/Readme_rus.html
@@ -85,17 +85,17 @@ http://connect.creativelabs.com/openal/default.aspx</a> <br>
 </blockquote>
 <p>
 <font face="Calibri">
-<b>The following shortcuts are available in the game:</b><br>
-<b>F8</b> speeds up the game pace x10<br>
-<b>F11 </b>will show debugging panel and menu<br>
-<b>1-4</b> opens corresponding tab in the gameplay menu<br>
-<b>P</b> pauses the game<br>
-<b>Esc</b> closes the open message or active tab in the game menu.<br>
-<b>Del</b> deletes the open message in game<br>
-<b>Spacebar</b> goes to the location of the open message in game<br>
-<b>&#8592;&#8593;&#8594;&#8595;</b> cursor keys will move you around the map<br>
+<b>В игре доступны следующие клавиатурные сокращения:</b><br>
+<b>F8</b> увеличить скорость игры в 10 раз<br>
+<b>F11</b> показать меню и отладочную панель<br>
+<b>1-4</b> открыть соответствующий раздел игрового меню<br>
+<b>P</b> пауза<br>
+<b>Esc</b> закрыть открытое сообщение, или открытый раздел игрового меню<br>
+<b>Del</b> удалить открытое сообщение<br>
+<b>Spacebar</b> перейти к месту события открытого сообщения<br>
+<b>&#8592;&#8593;&#8594;&#8595;</b> курсорные кнопки для перемещения по карте<br>
 Scrolling the <b>Mouse wheel</b> will zoom in and out<br>
-<b>&#8592; </b>backspace will reset zoom back to 100%<br>
+<b>&#8592;</b> backspace will reset zoom back to 100%<br>
 <b>Middle mouse click</b> will place a horseman (scout) at the cursor position to allow you to explore 
 the map<br>
 </font></p>
